@@ -1,20 +1,8 @@
 package gov.cdc.usds.simplereport.idp.repository;
 
-import com.okta.sdk.authc.credentials.TokenClientCredentials;
-import com.okta.sdk.client.Client;
-import com.okta.sdk.client.Clients;
-import com.okta.sdk.resource.ResourceException;
-import com.okta.sdk.resource.application.Application;
-import com.okta.sdk.resource.group.Group;
+import com.okta.sdk.helper.ApiExceptionHelper;
 import com.okta.sdk.resource.group.GroupBuilder;
-import com.okta.sdk.resource.group.GroupList;
-import com.okta.sdk.resource.group.GroupType;
-import com.okta.sdk.resource.user.User;
 import com.okta.sdk.resource.user.UserBuilder;
-import com.okta.sdk.resource.user.UserList;
-import com.okta.sdk.resource.user.UserProfile;
-import com.okta.sdk.resource.user.UserStatus;
-import com.okta.spring.boot.sdk.config.OktaClientProperties;
 import gov.cdc.usds.simplereport.api.CurrentTenantDataAccessContextHolder;
 import gov.cdc.usds.simplereport.api.model.errors.ConflictingUserException;
 import gov.cdc.usds.simplereport.api.model.errors.IllegalGraphqlArgumentException;
@@ -28,9 +16,9 @@ import gov.cdc.usds.simplereport.config.exceptions.MisconfiguredApplicationExcep
 import gov.cdc.usds.simplereport.db.model.Facility;
 import gov.cdc.usds.simplereport.db.model.Organization;
 import gov.cdc.usds.simplereport.service.model.IdentityAttributes;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.EnumSet;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -41,7 +29,21 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.apache.commons.lang3.StringUtils;
+import org.openapitools.client.ApiException;
+import org.openapitools.client.api.ApplicationApi;
+import org.openapitools.client.api.ApplicationGroupsApi;
+import org.openapitools.client.api.GroupApi;
+import org.openapitools.client.api.UserApi;
+import org.openapitools.client.model.Application;
+import org.openapitools.client.model.Error;
+import org.openapitools.client.model.ErrorErrorCausesInner;
+import org.openapitools.client.model.Group;
+import org.openapitools.client.model.GroupType;
+import org.openapitools.client.model.UpdateUserRequest;
+import org.openapitools.client.model.User;
+import org.openapitools.client.model.UserProfile;
+import org.openapitools.client.model.UserStatus;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
@@ -58,62 +60,44 @@ public class LiveOktaRepository implements OktaRepository {
 
   private static final String OKTA_GROUP_NOT_FOUND = "Okta group not found for this organization";
 
-  private final String _rolePrefix;
-  private final Client _client;
-  private final Application _app;
-  private final OrganizationExtractor _extractor;
-  private final CurrentTenantDataAccessContextHolder _tenantDataContextHolder;
+  private final String rolePrefix;
+  private final Application app;
+  private final OrganizationExtractor extractor;
+  private final CurrentTenantDataAccessContextHolder tenantDataContextHolder;
+  private final GroupApi groupApi;
+  private final UserApi userApi;
+  private final ApplicationGroupsApi applicationGroupsApi;
 
   public LiveOktaRepository(
       AuthorizationProperties authorizationProperties,
-      Client client,
       @Value("${okta.oauth2.client-id}") String oktaOAuth2ClientId,
       OrganizationExtractor organizationExtractor,
-      CurrentTenantDataAccessContextHolder tenantDataContextHolder) {
-    _rolePrefix = authorizationProperties.getRolePrefix();
-    _client = client;
+      CurrentTenantDataAccessContextHolder tenantDataContextHolder,
+      GroupApi groupApi,
+      ApplicationApi applicationApi,
+      UserApi userApi,
+      ApplicationGroupsApi applicationGroupsApi) {
+    this.rolePrefix = authorizationProperties.getRolePrefix();
+    this.groupApi = groupApi;
+    this.userApi = userApi;
+    this.applicationGroupsApi = applicationGroupsApi;
     try {
-      _app = _client.getApplication(oktaOAuth2ClientId);
-    } catch (ResourceException e) {
+      this.app = applicationApi.getApplication(oktaOAuth2ClientId, null);
+    } catch (ApiException e) {
       throw new MisconfiguredApplicationException(
           "Cannot find Okta application with id=" + oktaOAuth2ClientId, e);
     }
-    _extractor = organizationExtractor;
-    _tenantDataContextHolder = tenantDataContextHolder;
+    this.extractor = organizationExtractor;
+    this.tenantDataContextHolder = tenantDataContextHolder;
   }
 
-  @Autowired
-  public LiveOktaRepository(
-      AuthorizationProperties authorizationProperties,
-      OktaClientProperties oktaClientProperties,
-      @Value("${okta.oauth2.client-id}") String oktaOAuth2ClientId,
-      OrganizationExtractor organizationExtractor,
-      CurrentTenantDataAccessContextHolder tenantDataContextHolder) {
-    _rolePrefix = authorizationProperties.getRolePrefix();
-    _client =
-        Clients.builder()
-            .setOrgUrl(oktaClientProperties.getOrgUrl())
-            .setClientCredentials(new TokenClientCredentials(oktaClientProperties.getToken()))
-            .build();
-    try {
-      _app = _client.getApplication(oktaOAuth2ClientId);
-    } catch (ResourceException e) {
-      throw new MisconfiguredApplicationException(
-          "Cannot find Okta application with id=" + oktaOAuth2ClientId, e);
-    }
-    _extractor = organizationExtractor;
-    _tenantDataContextHolder = tenantDataContextHolder;
-  }
-
+  @Override
   public Optional<OrganizationRoleClaims> createUser(
       IdentityAttributes userIdentity,
       Organization org,
       Set<Facility> facilities,
       Set<OrganizationRole> roles,
       boolean active) {
-    // need to validate fields before adding them because Maps don't like nulls
-    Map<String, Object> userProfileMap = validateAndSetUserProfile(userIdentity);
-
     // By default, when creating a user, we give them privileges of a standard user
     String organizationExternalId = org.getExternalId();
     Set<OrganizationRole> rolesToCreate = EnumSet.of(OrganizationRole.getDefault());
@@ -136,14 +120,29 @@ public class LiveOktaRepository implements OktaRepository {
     // added groups. There is an open ticket for the okta sdk to investigate this issue
     // https://github.com/okta/okta-sdk-java/issues/750
     var searchResults =
-        _client
+        groupApi
             .listGroups(
                 null,
+                null,
+                null,
+                null,
+                null,
                 "profile.name sw \"" + generateGroupOrgPrefix(organizationExternalId) + "\"",
+                null,
                 null)
             .stream();
     var qResults =
-        _client.listGroups(generateGroupOrgPrefix(organizationExternalId), null, null).stream();
+        groupApi
+            .listGroups(
+                generateGroupOrgPrefix(organizationExternalId),
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null)
+            .stream();
     var orgGroups = Stream.concat(searchResults, qResults).distinct().toList();
     throwErrorIfEmpty(
         orgGroups.stream(),
@@ -163,23 +162,28 @@ public class LiveOktaRepository implements OktaRepository {
             .filter(g -> groupNamesToAdd.contains(g.getProfile().getName()))
             .map(Group::getId)
             .collect(Collectors.toSet());
+    validateRequiredFields(userIdentity);
     try {
       UserBuilder.instance()
-          .setProfileProperties(userProfileMap)
-          .setGroups(groupIdsToAdd)
+          .setFirstName(userIdentity.getFirstName())
+          .setMiddleName(userIdentity.getMiddleName())
+          .setLastName(userIdentity.getLastName())
+          .setHonorificSuffix(userIdentity.getSuffix())
+          .setEmail(userIdentity.getUsername())
+          .setLogin(userIdentity.getUsername())
+          .setGroups(new ArrayList<>(groupIdsToAdd))
           .setActive(active)
-          .buildAndCreate(_client);
-    } catch (ResourceException e) {
+          .buildAndCreate(userApi);
+    } catch (ApiException e) {
       if (e.getMessage()
-          .contains(
-              "HTTP 400, Okta E0000001 (Api validation failed: login - login: An object with this field already exists in the current organization")) {
+          .contains("An object with this field already exists in the current organization")) {
         throw new ConflictingUserException();
       } else {
-        throw new IllegalGraphqlArgumentException(e.getMessage());
+        throw new IllegalGraphqlArgumentException(prettifyOktaError(e));
       }
     }
 
-    List<OrganizationRoleClaims> claims = _extractor.convertClaims(groupNamesToAdd);
+    List<OrganizationRoleClaims> claims = extractor.convertClaims(groupNamesToAdd);
     if (claims.size() != 1) {
       log.warn("User is in {} Okta organizations, not 1", claims.size());
       return Optional.empty();
@@ -187,53 +191,37 @@ public class LiveOktaRepository implements OktaRepository {
     return Optional.of(claims.get(0));
   }
 
-  private Map<String, Object> validateAndSetUserProfile(IdentityAttributes userIdentity) {
-    Map<String, Object> userProfileMap = new HashMap<>();
-    if (userIdentity.getFirstName() != null && !userIdentity.getFirstName().isEmpty()) {
-      userProfileMap.put("firstName", userIdentity.getFirstName());
-    }
-    if (userIdentity.getMiddleName() != null && !userIdentity.getMiddleName().isEmpty()) {
-      userProfileMap.put("middleName", userIdentity.getMiddleName());
-    }
-    if (userIdentity.getLastName() != null && !userIdentity.getLastName().isEmpty()) {
-      userProfileMap.put("lastName", userIdentity.getLastName());
-    } else {
-      // last name is required
+  private static void validateRequiredFields(IdentityAttributes userIdentity) {
+    if (StringUtils.isBlank(userIdentity.getLastName())) {
       throw new IllegalGraphqlArgumentException("Cannot create Okta user without last name");
     }
-    if (userIdentity.getSuffix() != null && !userIdentity.getSuffix().isEmpty()) {
-      userProfileMap.put("honorificSuffix", userIdentity.getSuffix());
-    }
-    if (userIdentity.getUsername() != null && !userIdentity.getUsername().isEmpty()) {
-      // we assume login == email
-      userProfileMap.put("email", userIdentity.getUsername());
-      userProfileMap.put("login", userIdentity.getUsername());
-    } else {
-      // username is required
+    if (StringUtils.isBlank(userIdentity.getUsername())) {
       throw new IllegalGraphqlArgumentException("Cannot create Okta user without username");
     }
-    return userProfileMap;
   }
 
+  @Override
   public Set<String> getAllUsersForOrganization(Organization org) {
     Group orgDefaultOktaGroup = getDefaultOktaGroup(org);
-
-    return orgDefaultOktaGroup.listUsers().stream()
+    var groupUsers = groupApi.listGroupUsers(orgDefaultOktaGroup.getId(), null, null);
+    return groupUsers.stream()
         .map(u -> u.getProfile().getLogin())
         .collect(Collectors.toUnmodifiableSet());
   }
 
+  @Override
   public Map<String, UserStatus> getAllUsersWithStatusForOrganization(Organization org) {
     Group orgDefaultOktaGroup = getDefaultOktaGroup(org);
-
-    return orgDefaultOktaGroup.listUsers().stream()
+    var groupUsers = groupApi.listGroupUsers(orgDefaultOktaGroup.getId(), null, null);
+    return groupUsers.stream()
         .collect(Collectors.toMap(u -> u.getProfile().getLogin(), User::getStatus));
   }
 
   private Group getDefaultOktaGroup(Organization org) {
     final String orgDefaultGroupName =
         generateRoleGroupName(org.getExternalId(), OrganizationRole.getDefault());
-    final GroupList oktaGroupList = _client.listGroups(orgDefaultGroupName, null, null);
+    final var oktaGroupList =
+        groupApi.listGroups(orgDefaultGroupName, null, null, null, null, null, null, null);
 
     return oktaGroupList.stream()
         .filter(g -> orgDefaultGroupName.equals(g.getProfile().getName()))
@@ -241,12 +229,19 @@ public class LiveOktaRepository implements OktaRepository {
         .orElseThrow(() -> new IllegalGraphqlArgumentException(OKTA_GROUP_NOT_FOUND));
   }
 
+  @Override
   public Optional<OrganizationRoleClaims> updateUser(IdentityAttributes userIdentity) {
-    UserList users =
-        _client.listUsers(
-            null, null, generateLoginSearchTerm(userIdentity.getUsername()), null, null);
+    var users =
+        userApi.listUsers(
+            null,
+            null,
+            null,
+            null,
+            generateLoginSearchTerm(userIdentity.getUsername()),
+            null,
+            null);
     throwErrorIfEmpty(users.stream(), "Cannot update Okta user with unrecognized username");
-    User user = users.single();
+    User user = users.get(0);
     updateUser(user, userIdentity);
 
     return getOrganizationRoleClaimsForUser(user);
@@ -259,42 +254,59 @@ public class LiveOktaRepository implements OktaRepository {
     // Is it our fault we don't accommodate honorific suffix? Or Okta's fault they
     // don't have regular suffix? You decide.
     user.getProfile().setHonorificSuffix(userIdentity.getSuffix());
-    user.update();
+    var updateRequest = new UpdateUserRequest();
+    updateRequest.setProfile(user.getProfile());
+    userApi.updateUser(user.getId(), updateRequest, false);
   }
 
+  @Override
   public Optional<OrganizationRoleClaims> updateUserEmail(
       IdentityAttributes userIdentity, String email) {
-    UserList users =
-        _client.listUsers(
-            null, null, generateLoginSearchTerm(userIdentity.getUsername()), null, null);
+    var users =
+        userApi.listUsers(
+            null,
+            null,
+            null,
+            null,
+            generateLoginSearchTerm(userIdentity.getUsername()),
+            null,
+            null);
     throwErrorIfEmpty(
         users.stream(), "Cannot update email of Okta user with unrecognized username");
-    User user = users.single();
+    User user = users.get(0);
     UserProfile profile = user.getProfile();
     profile.setLogin(email);
     profile.setEmail(email);
     user.setProfile(profile);
+    var updateRequest = new UpdateUserRequest();
+    updateRequest.setProfile(profile);
     try {
-      user.update();
-    } catch (ResourceException e) {
+      userApi.updateUser(user.getId(), updateRequest, false);
+    } catch (ApiException e) {
       if (e.getMessage()
-          .contains(
-              "HTTP 400, Okta E0000001 (Api validation failed: login - login: An object with this field already exists in the current organization")) {
+          .contains("An object with this field already exists in the current organization")) {
         throw new ConflictingUserException();
       } else {
-        throw new IllegalGraphqlArgumentException(e.getMessage());
+        throw new IllegalGraphqlArgumentException(prettifyOktaError(e));
       }
     }
 
     return getOrganizationRoleClaimsForUser(user);
   }
 
+  @Override
   public void reprovisionUser(IdentityAttributes userIdentity) {
-    UserList users =
-        _client.listUsers(
-            null, null, generateLoginSearchTerm(userIdentity.getUsername()), null, null);
+    var users =
+        userApi.listUsers(
+            null,
+            null,
+            null,
+            null,
+            generateLoginSearchTerm(userIdentity.getUsername()),
+            null,
+            null);
     throwErrorIfEmpty(users.stream(), "Cannot reprovision Okta user with unrecognized username");
-    User user = users.single();
+    User user = users.get(0);
     UserStatus userStatus = user.getStatus();
 
     // any org user "deleted" through our api will be in SUSPENDED state
@@ -303,18 +315,16 @@ public class LiveOktaRepository implements OktaRepository {
     }
 
     updateUser(user, userIdentity);
+    userApi.resetFactors(user.getId());
 
-    // reset all MFA factors (this triggers an email to the user, which can be configured in Okta)
-    user.resetFactors();
-
-    // transitioning from SUSPENDED -> DEPROVISIONED -> ACTIVE will reset the user's password
-    // and password reset question.  `.activate(true)` will send an activation email (just like
-    // creating a new account).  This cannot be done with `.reactivate()` because `.reactivate()`
-    // requires the user to be in PROVISIONED state
-    user.deactivate();
-    user.activate(true);
+    // transitioning from SUSPENDED -> DEPROVISIONED -> ACTIVE will reset the user's password and
+    // password reset question. This cannot be done with `.reactivateUser()` because it requires the
+    // user to be in PROVISIONED state
+    userApi.deactivateUser(user.getId(), false);
+    userApi.activateUser(user.getId(), true);
   }
 
+  @Override
   public Optional<OrganizationRoleClaims> updateUserPrivileges(
       String username, Organization org, Set<Facility> facilities, Set<OrganizationRole> roles) {
     User user =
@@ -328,7 +338,7 @@ public class LiveOktaRepository implements OktaRepository {
     // Map user's current Okta group memberships (Okta group name -> Okta Group).
     // The Okta group name is our friendly role and facility group names
     Map<String, Group> currentOrgGroupMapForUser =
-        user.listGroups().stream()
+        userApi.listUserGroups(user.getId()).stream()
             .filter(
                 g ->
                     GroupType.OKTA_GROUP == g.getType()
@@ -338,7 +348,9 @@ public class LiveOktaRepository implements OktaRepository {
     if (!currentOrgGroupMapForUser.containsKey(groupOrgDefaultName)) {
       // The user is not a member of the default group for this organization.  If they happen
       // to be in any of this organization's groups, remove the user from those groups.
-      currentOrgGroupMapForUser.values().forEach(g -> g.removeUser(user.getId()));
+      currentOrgGroupMapForUser
+          .values()
+          .forEach(g -> groupApi.unassignUserFromGroup(g.getId(), user.getId()));
       throw new IllegalGraphqlArgumentException(
           "Cannot update privileges of Okta user in organization they do not belong to.");
     }
@@ -363,9 +375,18 @@ public class LiveOktaRepository implements OktaRepository {
     groupNamesToAdd.removeIf(currentOrgGroupMapForUser::containsKey);
 
     if (!groupNamesToRemove.isEmpty() || !groupNamesToAdd.isEmpty()) {
-
       Map<String, Group> fullOrgGroupMap =
-          _client.listGroups(null, "profile.name sw \"" + groupOrgPrefix + "\"", null).stream()
+          groupApi
+              .listGroups(
+                  null,
+                  null,
+                  null,
+                  null,
+                  null,
+                  "profile.name sw \"" + groupOrgPrefix + "\"",
+                  null,
+                  null)
+              .stream()
               .filter(g -> GroupType.OKTA_GROUP == g.getType())
               .collect(Collectors.toMap(g -> g.getProfile().getName(), Function.identity()));
       if (fullOrgGroupMap.size() == 0) {
@@ -376,7 +397,7 @@ public class LiveOktaRepository implements OktaRepository {
       for (String groupName : groupNamesToRemove) {
         Group group = fullOrgGroupMap.get(groupName);
         log.info("Removing {} from Okta group: {}", username, group.getProfile().getName());
-        group.removeUser(user.getId());
+        groupApi.unassignUserFromGroup(group.getId(), user.getId());
       }
 
       for (String groupName : groupNamesToAdd) {
@@ -386,62 +407,73 @@ public class LiveOktaRepository implements OktaRepository {
         }
         Group group = fullOrgGroupMap.get(groupName);
         log.info("Adding {} to Okta group: {}", username, group.getProfile().getName());
-        user.addToGroup(group.getId());
+        groupApi.assignUserToGroup(group.getId(), user.getId());
       }
     }
 
     return getOrganizationRoleClaimsForUser(user);
   }
 
+  @Override
   public void resetUserPassword(String username) {
-    UserList users = _client.listUsers(null, null, generateLoginSearchTerm(username), null, null);
+    var users =
+        userApi.listUsers(null, null, null, null, generateLoginSearchTerm(username), null, null);
     throwErrorIfEmpty(
         users.stream(), "Cannot reset password for Okta user with unrecognized username");
-    User user = users.single();
-    user.resetPassword(true);
+    User user = users.get(0);
+    userApi.generateResetPasswordToken(user.getId(), true, false);
   }
 
+  @Override
   public void resetUserMfa(String username) {
-    UserList users = _client.listUsers(null, null, generateLoginSearchTerm(username), null, null);
+    var users =
+        userApi.listUsers(null, null, null, null, generateLoginSearchTerm(username), null, null);
     throwErrorIfEmpty(users.stream(), "Cannot reset MFA for Okta user with unrecognized username");
-    User user = users.single();
-    user.resetFactors();
+    User user = users.get(0);
+    userApi.resetFactors(user.getId());
   }
 
+  @Override
   public void setUserIsActive(String username, boolean active) {
-    UserList users = _client.listUsers(null, null, generateLoginSearchTerm(username), null, null);
+    var users =
+        userApi.listUsers(null, null, null, null, generateLoginSearchTerm(username), null, null);
     throwErrorIfEmpty(
         users.stream(), "Cannot update active status of Okta user with unrecognized username");
-    User user = users.single();
+    User user = users.get(0);
 
     if (active && user.getStatus() == UserStatus.SUSPENDED) {
-      user.unsuspend();
+      userApi.unsuspendUser(user.getId());
     } else if (!active && user.getStatus() != UserStatus.SUSPENDED) {
-      user.suspend();
+      userApi.suspendUser(user.getId());
     }
   }
 
+  @Override
   public UserStatus getUserStatus(String username) {
     return getUserOrThrowError(
             username, "Cannot retrieve Okta user's status with unrecognized username")
         .getStatus();
   }
 
+  @Override
   public void reactivateUser(String username) {
-    UserList users = _client.listUsers(null, null, generateLoginSearchTerm(username), null, null);
+    var users =
+        userApi.listUsers(null, null, null, null, generateLoginSearchTerm(username), null, null);
     throwErrorIfEmpty(users.stream(), "Cannot reactivate Okta user with unrecognized username");
-    User user = users.single();
-    user.unsuspend();
+    User user = users.get(0);
+    userApi.unsuspendUser(user.getId());
   }
 
+  @Override
   public void resendActivationEmail(String username) {
-    UserList users = _client.listUsers(null, null, generateLoginSearchTerm(username), null, null);
+    var users =
+        userApi.listUsers(null, null, null, null, generateLoginSearchTerm(username), null, null);
     throwErrorIfEmpty(users.stream(), "Cannot reactivate Okta user with unrecognized username");
-    User user = users.single();
+    User user = users.get(0);
     if (user.getStatus() == UserStatus.PROVISIONED) {
-      user.reactivate(true);
+      userApi.reactivateUser(user.getId(), true);
     } else if (user.getStatus() == UserStatus.STAGED) {
-      user.activate(true);
+      userApi.activateUser(user.getId(), true);
     } else {
       throw new IllegalGraphqlArgumentException(
           "Cannot reactivate user with status: " + user.getStatus());
@@ -457,6 +489,7 @@ public class LiveOktaRepository implements OktaRepository {
    * new corresponding Okta groups where they do not already exist. Does not perform any migration
    * to these facility groups.
    */
+  @Override
   public void createOrganization(Organization org) {
     String name = org.getOrganizationName();
     String externalId = org.getExternalId();
@@ -468,55 +501,61 @@ public class LiveOktaRepository implements OktaRepository {
           GroupBuilder.instance()
               .setName(roleGroupName)
               .setDescription(roleGroupDescription)
-              .buildAndCreate(_client);
-      _app.createApplicationGroupAssignment(g.getId());
+              .buildAndCreate(groupApi);
+      applicationGroupsApi.assignGroupToApplication(app.getId(), g.getId(), null);
 
       log.info("Created Okta group={}", roleGroupName);
     }
   }
 
-  private UserList getOrgAdminUsers(Organization org) {
+  private List<User> getOrgAdminUsers(Organization org) {
     String externalId = org.getExternalId();
     String roleGroupName = generateRoleGroupName(externalId, OrganizationRole.ADMIN);
-    GroupList groups = _client.listGroups(roleGroupName, null, null);
+    var groups = groupApi.listGroups(roleGroupName, null, null, null, null, null, null, null);
     throwErrorIfEmpty(groups.stream(), "Cannot activate nonexistent Okta organization");
-    Group group = groups.single();
-    return group.listUsers();
+    Group group = groups.get(0);
+    return groupApi.listGroupUsers(group.getId(), null, null);
   }
 
   private String activateUser(User user) {
     if (user.getStatus() == UserStatus.PROVISIONED) {
       // reactivates user and sends them an Okta email to reactivate their account
-      return user.reactivate(true).getActivationToken();
+      return userApi.reactivateUser(user.getId(), true).getActivationToken();
     } else if (user.getStatus() == UserStatus.STAGED) {
-      return user.activate(true).getActivationToken();
+      return userApi.activateUser(user.getId(), true).getActivationToken();
     } else {
       throw new IllegalGraphqlArgumentException(
           "Cannot activate Okta organization whose users have status=" + user.getStatus().name());
     }
   }
 
+  @Override
   public void activateOrganization(Organization org) {
-    UserList users = getOrgAdminUsers(org);
+    var users = getOrgAdminUsers(org);
     for (User u : users) {
       activateUser(u);
     }
   }
 
+  @Override
   public String activateOrganizationWithSingleUser(Organization org) {
-    User user = getOrgAdminUsers(org).single();
+    User user = getOrgAdminUsers(org).get(0);
     return activateUser(user);
   }
 
+  @Override
   public List<String> fetchAdminUserEmail(Organization org) {
-    UserList admins = getOrgAdminUsers(org);
-    return admins.stream().map(u -> u.getProfile().getLogin()).collect(Collectors.toList());
+    var admins = getOrgAdminUsers(org);
+    return admins.stream().map(u -> u.getProfile().getLogin()).toList();
   }
 
+  @Override
   public void createFacility(Facility facility) {
     // Only create the facility group if the facility's organization has already been created
     String orgExternalId = facility.getOrganization().getExternalId();
-    GroupList orgGroups = _client.listGroups(generateGroupOrgPrefix(orgExternalId), null, null);
+    var orgGroups =
+        groupApi.listGroups(
+            generateGroupOrgPrefix(orgExternalId), null, null, null, null, null, null, null);
     throwErrorIfEmpty(
         orgGroups.stream(),
         String.format(
@@ -529,8 +568,8 @@ public class LiveOktaRepository implements OktaRepository {
         GroupBuilder.instance()
             .setName(facilityGroupName)
             .setDescription(generateFacilityGroupDescription(orgName, facility.getFacilityName()))
-            .buildAndCreate(_client);
-    _app.createApplicationGroupAssignment(g.getId());
+            .buildAndCreate(groupApi);
+    applicationGroupsApi.assignGroupToApplication(app.getId(), g.getId(), null);
 
     log.info("Created Okta group={}", facilityGroupName);
   }
@@ -538,28 +577,32 @@ public class LiveOktaRepository implements OktaRepository {
   public void deleteFacility(Facility facility) {
     String orgExternalId = facility.getOrganization().getExternalId();
     String groupName = generateFacilityGroupName(orgExternalId, facility.getInternalId());
-    GroupList groups = _client.listGroups(groupName, null, null);
+    var groups = groupApi.listGroups(groupName, null, null, null, null, null, null, null);
     for (Group group : groups) {
-      group.delete();
+      groupApi.deleteGroup(group.getId());
     }
   }
 
+  @Override
   public void deleteOrganization(Organization org) {
     String externalId = org.getExternalId();
-    GroupList orgGroups = _client.listGroups(generateGroupOrgPrefix(externalId), null, null);
+    var orgGroups =
+        groupApi.listGroups(
+            generateGroupOrgPrefix(externalId), null, null, null, null, null, null, null);
     for (Group group : orgGroups) {
-      group.delete();
+      groupApi.deleteGroup(group.getId());
     }
   }
 
   // returns the external ID of the organization the specified user belongs to
+  @Override
   public Optional<OrganizationRoleClaims> getOrganizationRoleClaimsForUser(String username) {
     // When a site admin is using tenant data access, bypass okta and get org from the altered
     // authorities.  If the site admin is getting the claims for another site admin who also has
     // active tenant data access, then reflect what is in Okta, not the temporary claims.
-    if (_tenantDataContextHolder.hasBeenPopulated()
-        && username.equals(_tenantDataContextHolder.getUsername())) {
-      return getOrganizationRoleClaimsFromAuthorities(_tenantDataContextHolder.getAuthorities());
+    if (tenantDataContextHolder.hasBeenPopulated()
+        && username.equals(tenantDataContextHolder.getUsername())) {
+      return getOrganizationRoleClaimsFromAuthorities(tenantDataContextHolder.getAuthorities());
     }
 
     return getOrganizationRoleClaimsForUser(
@@ -568,7 +611,7 @@ public class LiveOktaRepository implements OktaRepository {
 
   private Optional<OrganizationRoleClaims> getOrganizationRoleClaimsFromAuthorities(
       Collection<String> authorities) {
-    List<OrganizationRoleClaims> claims = _extractor.convertClaims(authorities);
+    List<OrganizationRoleClaims> claims = extractor.convertClaims(authorities);
 
     if (claims.size() != 1) {
       log.warn("User's Tenant Data Access has claims in {} organizations, not 1", claims.size());
@@ -579,11 +622,11 @@ public class LiveOktaRepository implements OktaRepository {
 
   private Optional<OrganizationRoleClaims> getOrganizationRoleClaimsForUser(User user) {
     List<String> groupNames =
-        user.listGroups().stream()
+        userApi.listUserGroups(user.getId()).stream()
             .filter(g -> g.getType() == GroupType.OKTA_GROUP)
             .map(g -> g.getProfile().getName())
-            .collect(Collectors.toList());
-    List<OrganizationRoleClaims> claims = _extractor.convertClaims(groupNames);
+            .toList();
+    List<OrganizationRoleClaims> claims = extractor.convertClaims(groupNames);
 
     if (claims.size() != 1) {
       log.warn("User is in {} Okta organizations, not 1", claims.size());
@@ -593,16 +636,16 @@ public class LiveOktaRepository implements OktaRepository {
   }
 
   private String generateGroupOrgPrefix(String orgExternalId) {
-    return String.format("%s%s", _rolePrefix, orgExternalId);
+    return String.format("%s%s", rolePrefix, orgExternalId);
   }
 
   private String generateRoleGroupName(String orgExternalId, OrganizationRole role) {
-    return String.format("%s%s%s", _rolePrefix, orgExternalId, generateRoleSuffix(role));
+    return String.format("%s%s%s", rolePrefix, orgExternalId, generateRoleSuffix(role));
   }
 
   private String generateFacilityGroupName(String orgExternalId, UUID facilityId) {
     return String.format(
-        "%s%s%s", _rolePrefix, orgExternalId, generateFacilitySuffix(facilityId.toString()));
+        "%s%s%s", rolePrefix, orgExternalId, generateFacilitySuffix(facilityId.toString()));
   }
 
   private String generateRoleGroupDescription(String orgName, OrganizationRole role) {
@@ -633,12 +676,33 @@ public class LiveOktaRepository implements OktaRepository {
 
   private User getUserOrThrowError(String username, String errorMessage) {
     var searchUsersStream =
-        _client.listUsers(null, null, generateLoginSearchTerm(username), null, null).stream();
+        userApi
+            .listUsers(null, null, null, null, generateLoginSearchTerm(username), null, null)
+            .stream();
     var user = searchUsersStream.findFirst();
     if (user.isEmpty()) {
-      var qUsersStream = _client.listUsers(username, null, null, null, null).stream();
+      var qUsersStream = userApi.listUsers(username, null, null, null, null, null, null).stream();
       user = qUsersStream.filter(u -> u.getProfile().getLogin().equals(username)).findFirst();
     }
     return user.orElseThrow(() -> new IllegalGraphqlArgumentException(errorMessage));
+  }
+
+  private String prettifyOktaError(ApiException e) {
+    var errorMessage = "Code: " + e.getCode() + "; Message: " + e.getMessage();
+    if (e.getResponseBody() != null) {
+      Error error = ApiExceptionHelper.getError(e);
+      if (error != null) {
+        errorMessage =
+            "Okta Error: " + error.getErrorCode() + ", Error summary: " + error.getErrorSummary();
+        if (error.getErrorCauses() != null) {
+          errorMessage +=
+              ", Error Cause(s): "
+                  + error.getErrorCauses().stream()
+                      .map(ErrorErrorCausesInner::getErrorSummary)
+                      .collect(Collectors.joining(", "));
+        }
+      }
+    }
+    return errorMessage;
   }
 }
